payment section label fixes

--- a/index.html
+++ b/index.html
@@ -470,30 +470,33 @@
                             <h3>Payment</h3>
                         </div>
                         <p>Please choose the appropriate option! &nbsp</p>
-                        <strong>Option 1 :</strong>
+                        <strong style="color: #4CAF50;">Option 1 :</strong>
                         <p>
-                            If this is the <strong>first</strong> submission from your flat, select this option,
-                            make the payment and attach payment screenshot.
+                            If this is the <strong>first time</strong> you are registering from your flat
+                            <br />
+                            <strong>- OR -</strong>
+                            <br />
+                            If you are registering for <strong>additional Food Stall(s)</strong> now, select this
+                            option, pay the amount below and attach payment screenshot.
                         </p>
                         <p id="checkoutTotalCharge" style="color: #4b0082;">Total Amount to be paid: INR 0</p>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="checkoutPaymentOption"
-                                id="checkoutOption1" value="I will pay for participation and/or food stall now." />
-                            <label class="form-check-label" for="checkoutOption1">I will pay for participation and/or
+                                id="checkoutOption1" value="I am paying for participation and/or food stall now." />
+                            <label class="form-check-label" for="checkoutOption1">I am paying for participation and/or
                                 food stall now.</label>
                         </div>
                         <div class="dividerthin"></div>
-                        <strong>Option 2 :</strong>
+                        <strong style="color: #4CAF50;">Option 2 :</strong>
                         <p>
-                            If you are registering <strong>again</strong> for additional participation from your flat,
-                            and
-                            have <strong>already paid Rs.700</strong>, select this option, skip the payment and
-                            attach original payment screenshot.
+                            If you have previously paid for your flat, and you are only registering <strong>additional
+                                participation</strong> now, select this option and attach <strong>previous</strong>
+                            payment screenshot.
                         </p>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="checkoutPaymentOption"
-                                id="checkoutOption2" value="I have already made a payment for my flat." />
-                            <label class="form-check-label" for="checkoutOption2">I have already made a payment for my
+                                id="checkoutOption2" value="I have previously paid for my flat." />
+                            <label class="form-check-label" for="checkoutOption2">I have previously paid for my
                                 flat.</label>
                         </div>
                         <div class="dividerthin"></div>
@@ -552,7 +555,9 @@
                                     placeholder="Enter name (minimum 5 characters)">
                             </div>
                             <div class="col-md-2">
-                                <button type="button" class="modern-btn w-100 d-flex align-items-center justify-content-center" id="dashboardSearchBtn" style="height: 38px;">
+                                <button type="button"
+                                    class="modern-btn w-100 d-flex align-items-center justify-content-center"
+                                    id="dashboardSearchBtn" style="height: 38px;">
                                     <i class="fas fa-search"></i>
                                 </button>
                             </div>
