registration closed logic

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             </div>
         </header>
 
+        <!-- Registration Closed Banner -->
+        <div class="registration-closed-banner">
+            <div class="running-text">
+                🎉 Winterfest 2025 Registrations are now closed. Thank you for your participation! 🎉
+            </div>
+        </div>
+
         <!-- Mobile Main -->
         <main class="mobile-main">
             <!-- Navigation Bar -->
