--- a/index.html
+++ b/index.html
@@ -610,7 +610,44 @@
                     <div class="section-header">
                         <h2>Admin</h2>
                     </div>
-                    <p><strong style="color: #8B4513;">Coming soon!</strong></p>
+                    <div class="row g-3">
+                        <div class="col-12">
+                            <div class="admin-panel">
+                                <button class="green-btn admin-panel-btn" onclick="window.open('refund.html', '_blank')">
+                                    <i class="fas fa-external-link-alt"></i> Launch
+                                </button>
+                                <div class="admin-panel-content">
+                                    <i class="fas fa-undo-alt fa-2x text-success mb-2"></i>
+                                    <h6 class="admin-panel-title">Refund Form</h6>
+                                    <p class="admin-panel-text">Process refund requests for participants</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12" id="reimbursement-panel">
+                            <div class="admin-panel">
+                                <button class="green-btn admin-panel-btn" onclick="window.open('reimbursement.html', '_blank')">
+                                    <i class="fas fa-external-link-alt"></i> Launch
+                                </button>
+                                <div class="admin-panel-content">
+                                    <i class="fas fa-money-bill-wave fa-2x text-warning mb-2"></i>
+                                    <h6 class="admin-panel-title">Expense Reimbursement Form</h6>
+                                    <p class="admin-panel-text">Submit expense reimbursement requests (Volunteers only)</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12" id="winner-panel">
+                            <div class="admin-panel">
+                                <button class="green-btn admin-panel-btn" onclick="window.open('winner.html', '_blank')">
+                                    <i class="fas fa-external-link-alt"></i> Launch
+                                </button>
+                                <div class="admin-panel-content">
+                                    <i class="fas fa-trophy fa-2x text-primary mb-2"></i>
+                                    <h6 class="admin-panel-title">Winner Entry Form</h6>
+                                    <p class="admin-panel-text">Record competition winners and results (Volunteers only)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
@@ -630,6 +667,24 @@
             </div>
             <div class="alert-modal-footer">
                 <button id="alertModalOkBtn" class="alert-modal-btn" onclick="hideAlertModal()">OK</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Email Input Modal -->
+    <div id="emailModal" class="alert-modal" onclick="hideEmailModal()">
+        <div class="alert-modal-content" onclick="event.stopPropagation()">
+            <div class="alert-modal-header">
+                <h3>Volunteer Authorization</h3>
+                <span class="alert-modal-close" onclick="hideEmailModal()">&times;</span>
+            </div>
+            <div class="alert-modal-body">
+                <p>Please enter your email address to access admin features:</p>
+                <input type="email" id="volunteerEmail" class="form-control" placeholder="Enter your email" required>
+            </div>
+            <div class="alert-modal-footer">
+                <button id="emailSubmitBtn" class="alert-modal-btn" onclick="checkVolunteerByEmail()">Submit</button>
+                <button id="emailCancelBtn" class="alert-modal-btn" onclick="hideEmailModal()">Cancel</button>
             </div>
         </div>
     </div>
