winner form changes

--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                     <div class="row g-3">
                         <div class="col-12">
                             <div class="admin-panel">
-                                <button class="green-btn admin-panel-btn" onclick="window.open('refund.html', '_blank')">
+                                <button class="green-btn admin-panel-btn" onclick="window.location.href='refund.html'">
                                     <i class="fas fa-external-link-alt"></i> Launch
                                 </button>
                                 <div class="admin-panel-content">
@@ -625,25 +625,28 @@
                         </div>
                         <div class="col-12" id="reimbursement-panel">
                             <div class="admin-panel">
-                                <button class="green-btn admin-panel-btn" onclick="window.open('reimbursement.html', '_blank')">
+                                <button class="green-btn admin-panel-btn"
+                                    onclick="window.location.href='reimbursement.html'">
                                     <i class="fas fa-external-link-alt"></i> Launch
                                 </button>
                                 <div class="admin-panel-content">
                                     <i class="fas fa-money-bill-wave fa-2x text-warning mb-2"></i>
                                     <h6 class="admin-panel-title">Expense Reimbursement Form</h6>
-                                    <p class="admin-panel-text">Submit expense reimbursement requests (Volunteers only)</p>
+                                    <p class="admin-panel-text">Submit expense reimbursement requests (Volunteers only)
+                                    </p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12" id="winner-panel">
                             <div class="admin-panel">
-                                <button class="green-btn admin-panel-btn" onclick="window.open('winner.html', '_blank')">
+                                <button class="green-btn admin-panel-btn" onclick="window.location.href='winner.html'">
                                     <i class="fas fa-external-link-alt"></i> Launch
                                 </button>
                                 <div class="admin-panel-content">
                                     <i class="fas fa-trophy fa-2x text-primary mb-2"></i>
                                     <h6 class="admin-panel-title">Winner Entry Form</h6>
-                                    <p class="admin-panel-text">Record competition winners and results (Volunteers only)</p>
+                                    <p class="admin-panel-text">Record competition winners and results (Volunteers only)
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -717,6 +720,7 @@
         </div>
     </div>
 
+    <script src="config.js"></script>
     <script src="competitions.js"></script>
     <script src="app.js"></script>
 
