--- a/refund.html
+++ b/refund.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Refund Form - Z1 Winterfest</title>
+    <title>Z1 Winterfest 2025</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="styles.css">
@@ -16,13 +16,14 @@
         <!-- Mobile Header -->
         <header class="mobile-header">
             <div class="brand">
-                <h1>Z1 Winterfest 2025 - Refund Form</h1>
+                <h1>Z1 Winterfest 2025</h1>
             </div>
         </header>
 
         <!-- Mobile Main -->
         <main class="mobile-main">
-            <section class="mobile-section active">
+            <a href="index.html?section=admin" class="back-to-admin">[BACK]</a>
+            <section id="content-section" class="mobile-section active">
                 <div class="container py-3">
                     <div class="section-header">
                         <h2>Refund Form</h2>
@@ -31,9 +32,6 @@
                         <i class="fas fa-tools fa-4x text-muted mb-4"></i>
                         <h3 class="text-muted">Coming Soon!</h3>
                         <p class="text-muted">This feature is under development.</p>
-                        <button class="btn btn-secondary" onclick="window.close()">
-                            <i class="fas fa-times"></i> Close
-                        </button>
                     </div>
                 </div>
             </section>
