--- a/winner.html
+++ b/winner.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Winner Entry Form - Z1 Winterfest</title>
+    <title>Z1 Winterfest 2025</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="styles.css">
@@ -16,12 +16,13 @@
         <!-- Mobile Header -->
         <header class="mobile-header">
             <div class="brand">
-                <h1>Z1 Winterfest 2025 - Winner Entry</h1>
+                <h1>Z1 Winterfest 2025</h1>
             </div>
         </header>
 
         <!-- Mobile Main -->
         <main class="mobile-main">
+            <a href="index.html?section=admin" class="back-to-admin">[BACK]</a>
             <section id="content-section" class="mobile-section active">
                 <div class="container py-3">
                     <div class="section-header">
