--- a/reimbursement.html
+++ b/reimbursement.html
@@ -26,7 +26,7 @@
             <section id="content-section" class="mobile-section active">
                 <div class="container py-3">
                     <div class="section-header">
-                        <h2>Expense Reimbursement Form</h2>
+                        <h2>Expense Form</h2>
                     </div>
                     <div class="text-center">
                         <i class="fas fa-tools fa-4x text-muted mb-4"></i>
