expense form and other overall fixes

--- a/index.html
+++ b/index.html
@@ -618,21 +618,21 @@
                                 </button>
                                 <div class="admin-panel-content">
                                     <i class="fas fa-trophy fa-2x text-primary mb-2"></i>
-                                    <h6 class="admin-panel-title">Winner Entry Form</h6>
+                                    <h6 class="admin-panel-title">Winner Entry</h6>
                                     <p class="admin-panel-text">Record competition winners and results (Volunteers only)
                                     </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12" id="reimbursement-panel">
+                        <div class="col-12" id="expense-panel">
                             <div class="admin-panel">
                                 <button class="green-btn admin-panel-btn"
-                                    onclick="window.location.href='reimbursement.html'">
+                                    onclick="window.location.href='expense.html'">
                                     <i class="fas fa-external-link-alt"></i> Launch
                                 </button>
                                 <div class="admin-panel-content">
                                     <i class="fas fa-money-bill-wave fa-2x text-warning mb-2"></i>
-                                    <h6 class="admin-panel-title">Expense Reimbursement Form</h6>
+                                    <h6 class="admin-panel-title">Expense Reimbursement</h6>
                                     <p class="admin-panel-text">Submit expense reimbursement requests (Volunteers only)
                                     </p>
                                 </div>
@@ -645,7 +645,7 @@
                                 </button>
                                 <div class="admin-panel-content">
                                     <i class="fas fa-undo-alt fa-2x text-success mb-2"></i>
-                                    <h6 class="admin-panel-title">Refund Form</h6>
+                                    <h6 class="admin-panel-title">Fee Refund</h6>
                                     <p class="admin-panel-text">Process refund requests for participants</p>
                                 </div>
                             </div>
