winner form gender label fix

--- a/winner.html
+++ b/winner.html
@@ -63,15 +63,15 @@
 
                         <!-- Gender -->
                         <div class="mb-3">
-                            <label for="competitionGender" class="form-label">Gender <span
+                            <label for="competitionGender" class="form-label">Gender Format <span
                                     class="text-danger">*</span></label>
                             <select class="form-select" id="competitionGender" required disabled>
-                                <option value="">Select Gender</option>
+                                <option value="">Select Gender Format</option>
                                 <option value="Male">Male</option>
                                 <option value="Female">Female</option>
                                 <option value="Mixed">Mixed</option>
                             </select>
-                            <div class="invalid-feedback">Please select a gender.</div>
+                            <div class="invalid-feedback">Please select a gender format.</div>
                         </div>
 
                         <!-- Winner Fields Container -->
